[package]
name = "polaris-fuse"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mount-polaris"
path = "main.rs"

[dependencies]
base64 = "0.21.7"
cached = "0.48.1"
camino = { version = "1.1.6", features = ["serde1"] }
femtofemme = { version = "0.2.0", default-features = false, features = ["color"] }
fuser = "0.14.0"
indexmap = "2.1.0"
libc = "0.2.152"
log = { version = "0.4.20", features = ["std"] }
serde = { version = "1.0.195", features = ["derive"] }
ureq = { version = "2.9.1", features = ["brotli", "json", "proxy-from-env", "socks-proxy"] }
url = "2.5.0"
